# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironauth-env"
version = "0.1.0"
description = "Deterministic environment seam for IronAuth: clock and entropy access"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
getrandom.workspace = true

[lints]
workspace = true
