# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironauth-jose"
version = "0.1.0"
description = "IronAuth hardened JOSE verification and signing core: the single allowlist-driven JWS/JWT verify choke point plus the matching mint (EdDSA default, full asymmetric matrix, restricted client-secret HMAC, per-environment key store and JWKS), built directly on ring, that never trusts token headers for key or algorithm selection and structurally closes the 2025-2026 JOSE CVE wave"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Explicit test list. The compile-fail visibility proofs are database-free and
# run on every lane; the adversarial and positive suites drive the one public
# verify entry point. Auto-discovery stays on (no per-test required-features).

[dependencies]
# The crypto backend is ring's low-level signature primitives DIRECTLY (no
# high-level JOSE crate: those carry the very CVE classes this core closes). ring
# is already in the tree via rustls; this is a direct edge, no new crate, no
# license change (Apache-2.0 AND ISC, both on the deny.toml allowlist). Default
# features keep `alloc` on, which the RSA verification path (RsaPublicKeyComponents)
# requires.
ring.workspace = true
# base64url (URL_SAFE_NO_PAD) decoding of the JWS segments.
base64.workspace = true
# JSON parsing of the protected header and the claims. serde derives the header
# and claim shapes; a duplicate-key-rejecting deserializer hardens both.
serde_json.workspace = true
serde.workspace = true
# The determinism seam: exp/nbf/iat are evaluated against env.clock().now_utc(),
# never SystemTime::now, so claim-window logic is testable with a manual clock.
# ALSO the source of the keygen RNG bridge (`keygen_rng`): ES256/RS256 day-one keys
# are generated from a ChaCha20 stream seeded off the entropy seam.
ironauth-env.workspace = true
# Asymmetric key GENERATION only (issue #93): ring cannot generate RSA keys and
# binds its ECDSA generation to its own RNG, so day-one ES256 and RS256 keys are
# generated here with p256/rsa and exported to PKCS#8 / PKCS#1 DER, then LOADED and
# signed exclusively through ring (still the one and only signature backend). These
# crates NEVER sign, verify, or decrypt; the rsa Marvin advisory
# (RUSTSEC-2023-0071) is on the unreachable decryption path (scoped-ignored in
# deny.toml). The keygen RNG is seeded off the ironauth-env entropy seam, so keys
# are reproducible under a fixed test entropy source.
p256.workspace = true
rsa.workspace = true

[features]
default = []
# Test-only WebAuthn software-authenticator crypto helpers (issue #65). Exposes a
# raw Ed25519 sign and public-key derivation over `ring` so a downstream crate's
# integration test (ironauth-webauthn) can act as a virtual authenticator and
# produce genuinely valid assertion signatures. Signing-only; it adds no
# verification path, and ring stays contained in this crate.
test-util = []

[dev-dependencies]
# trybuild drives the compile-fail proofs that the private primitives are
# unreachable from outside the crate.
trybuild.workspace = true

[lints]
workspace = true
